fix lang on click on home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 <div id="menu">
 <ul>
-<li><a href="../en/">{{ tx.menu.home }}</a></li>
+<li><a href="../{{page.lang}}/">{{ tx.menu.home }}</a></li>
 <li><a href="download">{{ tx.menu.download }}</a></li>
 <li><a href="blog">{{ tx.menu.blog }}</a></li>
 <li><a href="contribute">{{ tx.menu.contribute }}</a></li>
