--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -72,7 +72,7 @@
             </div>
             <p>
             {{tx.download.dl_apk_text.before}}
-                <a href="https://github.com/deltachat/deltachat-android/releases/download/preview-v0.950.0/deltachat-gplay-release-0.950.0.apk">
+                <a href="https://download.delta.chat/android/deltachat-stable.apk">
                 APK
                 </a>
             {{tx.download.dl_apk_text.after}}
