improving the apk download.

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -4,7 +4,7 @@
     <div id="recommendation-section" hidden>
         <h1>{{tx.download.recommendation}}:</h1>
         <div id="recommend"></div>
-        <h1>{{tx.download.recommendation}}:</h1>
+        <h1>{{tx.download.other}}:</h1>
     </div>
     <div id="boxes">
         <div class="box" id="linux">
@@ -72,7 +72,7 @@
             </div>
             <p>
             {{tx.download.dl_apk_text.before}}
-                <a href="https://download.delta.chat/android/deltachat-stable.apk">
+                <a href="https://download.delta.chat/android/">
                 APK
                 </a>
             {{tx.download.dl_apk_text.after}}
