--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -72,7 +72,7 @@
             </div>
             <p>
             {{tx.download.dl_apk_text.before}}
-                <a href="https://download.delta.chat/android/deltachat-stable.apk">
+                <a href="https://download.delta.chat/android/">
                 APK
                 </a>
             {{tx.download.dl_apk_text.after}}
