--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,7 +101,7 @@ body {
     margin: 1em 0;
 }
 
-h1:not(:first-child), h2:not(:first-child) {
+h1:not(:first-child), h2:not(:first-child), h3:not(:first-child) {
     margin-top: 2em;
 }
 
@@ -129,6 +129,7 @@ ol li { list-style: decimal; margin: 0.5em 0.2em; padding-left: 0.5em; }
 
 h1 { font-weight: normal; font-size: 24px; letter-spacing: 1px; line-height: 1.4em; color: #000; }
 h2 { font-weight: bold; font-size: 16px; letter-spacing: 1px; color: #159957; }
+h3 { font-weight: bold; letter-spacing: 1px; color: #159957; }
 
 a, a:visited {
     /*color: #0063DC;*/
