changing desktop stable links

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -11,8 +11,8 @@
             <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{{tx.download.source_code}}</a>
             <div class="title">GNU+Linux</div>
             <div class="buttons">
-                <a href="https://download.delta.chat/desktop/DeltaChat.stable.amd64.deb" class="big-button">Debian / Ubuntu (.deb)</a>
-                <a href="https://download.delta.chat/desktop/DeltaChat.stable.AppImage" class="big-button">Universal (.AppImage)</a>
+                <a href="https://download.delta.chat/desktop/DeltaChat.deb" class="big-button">Debian / Ubuntu (.deb)</a>
+                <a href="https://download.delta.chat/desktop/DeltaChat.AppImage" class="big-button">Universal (.AppImage)</a>
                 <a href="https://flathub.org/apps/details/chat.delta.desktop" class="soon img-badge">
                     <img src="../assets/badges/flathub.svg" alt="{{tx.download.flathub}}" />
                 </a>
@@ -30,8 +30,8 @@
             <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{{tx.download.source_code}}</a>
             <div class="title">Windows</div>
             <div class="buttons">
-                <a href="https://download.delta.chat/desktop/DeltaChat.stable.setup.exe" class="big-button">Setup (.exe)</a>
-                <a class="soon big-button">Portable (.exe)</a>
+                <a href="https://download.delta.chat/desktop/DeltaChat%20Setup.exe" class="big-button">Setup (.exe)</a>
+                <a href="https://download.delta.chat/desktop/DeltaChat%20Portable.exe" class="big-button">Portable (.exe)</a>
                 <a class="soon img-badge">
                     <img src="../assets/badges/microsoft.svg" alt="{{tx.download.dl_microsoft}}" />
                 </a>
@@ -41,7 +41,7 @@
             <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{{tx.download.source_code}}</a>
             <div class="title">macOS</div>
             <div class="buttons">
-                <a href="https://download.delta.chat/desktop/DeltaChat.stable.dmg" class="big-button">DMG</a>
+                <a href="https://download.delta.chat/desktop/DeltaChat.dmg" class="big-button">DMG</a>
                 <a class="soon img-badge">
                     <img src="../assets/badges/mac-appstore.svg" alt="{{tx.download.dl_mac_appstore}}" />
                 </a>
