--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -77,7 +77,7 @@ body {
 
     #content {	   
         margin: 0 auto;
-        width: 75%;
+        # width: 75%;
         min-width: 580px;
         max-width: 800px;
     }
