one more page.lang in the html

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -1,4 +1,4 @@
-{% assign tx = site.data.lang[page.lang] %}
+{% assign tx = site.data.lang[page.lang][page.lang] %}
 
 <div class="download-content">
     <div id="recommendation-section" hidden>
