let button show up

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -31,7 +31,7 @@
             <div class="title">Windows</div>
             <div class="buttons">
                 <a href="https://download.delta.chat/desktop/0.901.0/DeltaChat%20Setup%200.901.0.exe" class="big-button">Setup (.exe)</a>
-                <a href="https://download.delta.chat/desktop/0.901.0/DeltaChat%200.901.0.exe" class="soon big-button">Portable (.exe)</a>
+                <a href="https://download.delta.chat/desktop/0.901.0/DeltaChat%200.901.0.exe" class="big-button">Portable (.exe)</a>
                 <a class="soon img-badge">
                     <img src="../assets/badges/microsoft.svg" alt="{{tx.download.dl_microsoft}}" />
                 </a>
