we are now also on appstore

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -52,7 +52,7 @@
             <div class="title">iOS (iPhone)</div>
             <div class="buttons">
                 <a href="https://testflight.apple.com/join/uEMc1NxS"><small>{{tx.download.beta_on}}</small> Testflight</a>
-                <a class="soon img-badge">
+                <a class="img-badge" href="https://apps.apple.com/us/app/delta-chat/id1459523234">
                     <img src="../assets/badges/get-it-on-ios.png" alt="{{tx.download.dl_appstore}}" />
                 </a>
             </div>
