update copyright year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
 <span class="desktoponly">{%if tx.language == blank%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
 {% include footer-languages.html %}
 <br>
-© 2017-2019 Delta Chat contributors
+© 2020 Delta Chat contributors
 </p>
 </div>
 
