remove fdroid for now

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -63,9 +63,9 @@
             <div class="title">Android</div>
             <div class="buttons">
                 <a href="" class="big-button soon">APK</a>
-                <a href="https://f-droid.org/app/com.b44t.messenger" class="img-badge">
+                <!-- <a href="https://f-droid.org/app/com.b44t.messenger" class="img-badge">
                     <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid == blank%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
-                </a>
+                </a> -->
                 <a href="https://play.google.com/store/apps/details?id=chat.delta" class="img-badge">
                     <img src="../assets/badges/get-it-on-gplay-beta.png" alt="{%if tx.download.beta_gplay == blank%}{{ tx.download.beta_gplay }}{%else%}{{ txEn.download.beta_gplay }}{%endif%}"  />
                 </a>
