flatpak is not outdated anymore

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -14,7 +14,7 @@
             <div class="buttons">
                 <a href="https://download.delta.chat/desktop/0.901.0/deltachat-desktop_0.901.0_amd64.deb" class="big-button">Debian / Ubuntu (.deb)</a>
                 <a href="https://download.delta.chat/desktop/0.901.0/DeltaChat-0.901.0.AppImage" class="big-button">Universal (.AppImage)</a>
-                <a href="https://flathub.org/apps/details/chat.delta.desktop" class="soon img-badge">
+                <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
                     <img src="../assets/badges/flathub.svg" alt="{%if tx.download.flathub == blank%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
                 </a>
             </div>
@@ -23,7 +23,7 @@
                 Arch <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/">(AUR)</a>:
                 <code>yay -S deltachat-desktop-git</code>
                 <br>
-                <a href="https://flathub.org/apps/details/chat.delta.desktop">Flatpak</a> ({%if tx.download.outdated == blank%}{{ tx.download.outdated }}{%else%}{{ txEn.download.outdated }}{%endif%}):
+                <a href="https://flathub.org/apps/details/chat.delta.desktop">Flatpak</a>:
                 <code>flatpak install flathub chat.delta.desktop</code>
             </p>
         </div>
