followed readme instructions to add NL

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -9,4 +9,5 @@
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
 <a href="../sq/">SQ</a>  |
+<a href="../nl/">NL</a>  |
 <a href="../uk/">UK</a>
