hotfixing plural iPhone -> iPhones #274

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -50,7 +50,7 @@
         </div>
         <div class="box" id="ios">
             <a href="https://github.com/deltachat/deltachat-ios" class="source-link">{%if tx.download.source_code == blank%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-            <div class="title">iOS (iPhone and iPads)</div>
+            <div class="title">iOS (iPhones and iPads)</div>
             <div class="buttons">
                 <a href="https://testflight.apple.com/join/uEMc1NxS"><small>{%if tx.download.beta_on == blank%}{{ tx.download.beta_on }}{%else%}{{ txEn.download.beta_on }}{%endif%}</small> Testflight</a>
                 <a class="img-badge" href="https://apps.apple.com/us/app/delta-chat/id1459523234">
