--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -1,6 +1,6 @@
 {% assign txEn = site.data.lang['en']['en'] %}
 {% assign tx = site.data.lang[page.lang][page.lang] %}
-{% assign VERSION_DESKTOP = "v0.999.1" %}
+{% assign VERSION_DESKTOP = "0.999.1" %}
 
 <div class="download-content">
     <div id="recommendation-section" hidden>
