added css+html for blog preview featured images

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,6 +60,17 @@ body {
     color: #AAA;
 }
 
+.featured-image {
+	max-height: 12em;
+	overflow: hidden;
+	margin-bottom: -2em;
+	margin-top: 1em;
+}
+
+.featured-image img {
+	width: 100%;
+}
+
 
 /* rough layout: desktop second 
 *******************************************************************************/
@@ -79,6 +90,22 @@ body {
         a, a:visited {
             font-size: 20px;
         }
+    }
+    
+    .featured-image {
+	float: right;
+	max-height: 200px !important;
+	max-width: 270px;
+	margin-left: 20px;
+	margin-bottom: 1em;
+    }
+
+    .featured-image img {
+	width: 270px;
+    }
+
+    .post-box {
+	min-height: 200px;
     }
 
     #content {	   
