--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,10 +1,15 @@
 {% for post in site.posts %}
+<div class="post-box">
+<div class="featured-image">
+    <img src="{{ post.image }}" /> 
+</div>
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 <p>
 	<em>{{ post.date | date: "%B %d, %Y" }}</em> -
 	{{ post.excerpt | strip_html }} 
 	<a href="{{ post.url }}">Read on ...</a>
 </p>
+</div>
 {% endfor %}
 
 <p class="menulike">Subscribe to our feed: {% include subscribe-to-feed-links.html %}</p>
