--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,23 +8,23 @@
 <title>{{ page.title }} - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<meta name="description" content="{%if tx.meta.description == blank%}{{ tx.meta.description }}{%else%}{{ txEn.meta.description }}{%endif%}" />
-<meta name="keywords" content="{%if tx.meta.keywords == blank%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
+<meta name="description" content="{%if tx.meta.description != ""%}{{ tx.meta.description }}{%else%}{{ txEn.meta.description }}{%endif%}" />
+<meta name="keywords" content="{%if tx.meta.keywords != ""%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
 
 <link rel="stylesheet" href="../assets/css/styles.css" type="text/css" />
-<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title == blank%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
+<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title != ""%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
 </head>
 
 <body id="top">
 
 <div id="menu">
 <ul>
-<li><a href="../{{page.lang}}/">{%if tx.menu.home == blank%}{{ tx.menu.home }}{%else%}{{ txEn.menu.home }}{%endif%}</a></li>
-<li><a href="download">{%if tx.menu.download == blank%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a></li>
-<li><a href="blog">{%if tx.menu.blog == blank%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
-<li><a href="contribute">{%if tx.menu.contribute == blank%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a></li>
-<li><a href="help">{%if tx.menu.help == blank%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a></li>
-<li><a href="https://support.delta.chat">{%if tx.menu.forum == blank%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a></li>
+<li><a href="../{{page.lang}}/">{%if tx.menu.home != ""%}{{ tx.menu.home }}{%else%}{{ txEn.menu.home }}{%endif%}</a></li>
+<li><a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a></li>
+<li><a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
+<li><a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a></li>
+<li><a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a></li>
+<li><a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a></li>
 </ul>
 </div>
 
@@ -57,7 +57,7 @@
 <a href="blog">Index</a>
 {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
 </p>
-<p class="menulike">{%if tx.subscribe_to_feed == blank%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
+<p class="menulike">{%if tx.subscribe_to_feed != ""%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
 {% endif %}
 
 
@@ -65,12 +65,12 @@
 
 <div id="footer">
 <p>
-    <a href="references">{%if tx.references == blank%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
-    | <a href="https://github.com/deltachat/">{%if tx.download.source_code == blank%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-    | <a href="imprint">{%if tx.imprint == blank%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
-    | <a href="gdpr-website">{%if tx.privacy == blank%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
+    <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
+    | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+    | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
+    | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
 <br>
-<span class="desktoponly">{%if tx.language == blank%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
+<span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
 {% include footer-languages.html %}
 <br>
 © 2020 Delta Chat contributors
