out of beta #319

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -68,7 +68,7 @@
                     <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid != ""%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=chat.delta" class="img-badge">
-                    <img src="../assets/badges/get-it-on-gplay-beta.png" alt="{%if tx.download.beta_gplay != ""%}{{ tx.download.beta_gplay }}{%else%}{{ txEn.download.beta_gplay }}{%endif%}"  />
+                    <img src="../assets/badges/get-it-on-gplay.png" alt="{%if tx.download.gplay != ""%}{{ tx.download.gplay }}{%else%}{{ txEn.download.gplay }}{%endif%}"  />
                 </a>
                 <a class="soon"><small>{%if tx.download.dl_amazon.small != ""%}{{ tx.download.dl_amazon.small }}{%else%}{{ txEn.download.dl_amazon.small }}{%endif%}</small>{%if tx.download.dl_amazon.title != ""%}{{ tx.download.dl_amazon.title }}{%else%}{{ txEn.download.dl_amazon.title }}{%endif%}</a>
             </div>
