--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -9,9 +9,39 @@
         <h1>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}:</h1>
     </div>
     <div id="boxes">
+        <div class="box" id="android">
+            <div class="title">Android</div>
+            <div class="buttons">
+                <a href="https://f-droid.org/app/com.b44t.messenger" class="img-badge">
+                    <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid != ""%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=chat.delta" class="img-badge">
+                    <img src="../assets/badges/get-it-on-gplay.png" alt="{%if tx.download.gplay != ""%}{{ tx.download.gplay }}{%else%}{{ txEn.download.gplay }}{%endif%}"  />
+                </a>
+            </div>
+            <p>
+                <a href="https://github.com/deltachat/deltachat-android">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+                &ndash;
+                {%if tx.download.dl_apk_text.before != ""%}{{ tx.download.dl_apk_text.before }}{%else%}{{ txEn.download.dl_apk_text.before }}{%endif%}
+                <a href="https://download.delta.chat/android/">APK</a>
+                {%if tx.download.dl_apk_text.after != ""%}{{ tx.download.dl_apk_text.after }}{%else%}{{ txEn.download.dl_apk_text.after }}{%endif%}
+            </p>
+        </div>
+        <div class="box" id="ios">
+            <div class="title">iOS</div>
+            <div class="buttons">
+                <a class="img-badge" href="https://apps.apple.com/us/app/delta-chat/id1459523234">
+                    <img src="../assets/badges/get-it-on-ios.png" alt="{%if tx.download.dl_appstore != ""%}{{ tx.download.dl_appstore }}{%else%}{{ txEn.download.dl_appstore }}{%endif%}" />
+                </a>
+            </div>
+            <p>
+                <a href="https://github.com/deltachat/deltachat-ios">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+                &ndash;
+                <a href="https://testflight.apple.com/join/uEMc1NxS">{%if tx.download.beta_on != ""%}{{ tx.download.beta_on }}{%else%}{{ txEn.download.beta_on }}{%endif%} Testflight</a>
+            </p>
+        </div>
         <div class="box" id="linux">
-            <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-            <div class="title">GNU+Linux</div>
+            <div class="title">Linux</div>
             <div class="buttons">
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/deltachat-desktop_{{VERSION_DESKTOP}}_amd64.deb" class="big-button">Debian / Ubuntu (.deb)</a>
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.AppImage" class="big-button">Universal (.AppImage)</a>
@@ -19,65 +49,30 @@
                     <img src="../assets/badges/flathub.svg" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
                 </a>
             </div>
-            <div class="sub-title">{%if tx.download.install_via_packagemanager != ""%}{{ tx.download.install_via_packagemanager }}{%else%}{{ txEn.download.install_via_packagemanager }}{%endif%}</div>
             <p>
-                Arch <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/">(AUR)</a>:
+                <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+                &ndash;
+                <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/">Arch (AUR)</a>:
                 <code>yay -S deltachat-desktop-git</code>
-                <br>
-                <a href="https://flathub.org/apps/details/chat.delta.desktop">Flatpak</a>:
-                <code>flatpak install flathub chat.delta.desktop</code>
             </p>
         </div>
         <div class="box" id="windows">
-            <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
             <div class="title">Windows</div>
             <div class="buttons">
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat%20Setup%20{{VERSION_DESKTOP}}.exe" class="big-button">Setup (.exe)</a>
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat%20{{VERSION_DESKTOP}}.exe" class="big-button">Portable (.exe)</a>
-                <a class="soon img-badge">
-                    <img src="../assets/badges/microsoft.svg" alt="{%if tx.download.dl_microsoft != ""%}{{ tx.download.dl_microsoft }}{%else%}{{ txEn.download.dl_microsoft }}{%endif%}" />
-                </a>
-            </div>    
+            </div>
+            <p>
+                <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+            </p>
         </div>
         <div class="box" id="osx">
-            <a href="https://github.com/deltachat/deltachat-desktop" class="source-link">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
             <div class="title">macOS</div>
             <div class="buttons">
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.dmg" class="big-button">DMG</a>
-                <a class="soon img-badge">
-                    <img src="../assets/badges/mac-appstore.svg" alt="{%if tx.download.dl_mac_appstore != ""%}{{ tx.download.dl_mac_appstore }}{%else%}{{ txEn.download.dl_mac_appstore }}{%endif%}" />
-                </a>
-            </div>
-        </div>
-        <div class="box" id="ios">
-            <a href="https://github.com/deltachat/deltachat-ios" class="source-link">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-            <div class="title">iOS (iPhones and iPads)</div>
-            <div class="buttons">
-                <a href="https://testflight.apple.com/join/uEMc1NxS"><small>{%if tx.download.beta_on != ""%}{{ tx.download.beta_on }}{%else%}{{ txEn.download.beta_on }}{%endif%}</small> Testflight</a>
-                <a class="img-badge" href="https://apps.apple.com/us/app/delta-chat/id1459523234">
-                    <img src="../assets/badges/get-it-on-ios.png" alt="{%if tx.download.dl_appstore != ""%}{{ tx.download.dl_appstore }}{%else%}{{ txEn.download.dl_appstore }}{%endif%}" />
-                </a>
-            </div>
-        </div>
-        <div class="box" id="android">
-            <a href="https://github.com/deltachat/deltachat-android" class="source-link">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-            <div class="title">Android</div>
-            <div class="buttons">
-                <a href="" class="big-button soon">APK</a>
-                <a href="https://f-droid.org/app/com.b44t.messenger" class="img-badge">
-                    <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid != ""%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=chat.delta" class="img-badge">
-                    <img src="../assets/badges/get-it-on-gplay.png" alt="{%if tx.download.gplay != ""%}{{ tx.download.gplay }}{%else%}{{ txEn.download.gplay }}{%endif%}"  />
-                </a>
-                <a class="soon"><small>{%if tx.download.dl_amazon.small != ""%}{{ tx.download.dl_amazon.small }}{%else%}{{ txEn.download.dl_amazon.small }}{%endif%}</small>{%if tx.download.dl_amazon.title != ""%}{{ tx.download.dl_amazon.title }}{%else%}{{ txEn.download.dl_amazon.title }}{%endif%}</a>
             </div>
             <p>
-            {%if tx.download.dl_apk_text.before != ""%}{{ tx.download.dl_apk_text.before }}{%else%}{{ txEn.download.dl_apk_text.before }}{%endif%}
-                <a href="https://download.delta.chat/android/">
-                APK
-                </a>
-            {%if tx.download.dl_apk_text.after != ""%}{{ tx.download.dl_apk_text.after }}{%else%}{{ txEn.download.dl_apk_text.after }}{%endif%}
+                <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
             </p>
         </div>
     </div>
